tests/ui/contracts/empty-ensures.stderr
error[E0277]: expected a `Fn(&_)` closure, found `()`
  --> $DIR/empty-ensures.rs:8:1
   |
LL | #[ensures()]
   | ^^^^^^^^^^^^
   | |
   | expected an `Fn(&_)` closure, found `()`
   | required by a bound introduced by this call
   |
   = help: the trait `for<'a> Fn(&'a _)` is not implemented for `()`
note: required by a bound in `build_check_ensures`
  --> $SRC_DIR/core/src/contracts.rs:LL:COL

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
